compiler/tests/fixtures/valid/group_role_loop.viv
// Action with a loop over a group role

action announce:
    roles:
        @speaker:
            as: initiator
        @audience*:
            as: bystander
            n: 1-5
    effects:
        loop @audience* as _@listener:
            _@listener.trust += 1
        end
