compiler/tests/fixtures/invalid/semantics/initiator_with_max_2.viv
// Initiator role with max other than 1 — should be rejected

action bad-action:
    roles:
        @leader*:
            as: initiator
            n: 1-3
